styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");

:root {
  /* main accent color */
  --color1: #39ff14;
  /* main body text color */
  --color2: #ffffffdf;
  /* main dark background color */
  --color3: #121212;
  /* secondary accent color for links/subheadings/... */
  --color4: #1dbb00;
}
body {
  background-color: var(--color3);
}

h1 {
  color: var(--color1);
  font-family: "Roboto";
  font-weight: 700;
}

p {
  color: var(--color2);
  font-family: "Fira Code", monospace;
  font-weight: 400;
  font-size: 1em;
}

.main-section {
  justify-content: center;
  align-items: center;
  display: flex;
  width: 100%;
  height: 100vh;
}

.profile-box-flex {
  margin: auto;
  padding: 20px 30px;
  width: 400px;
  height: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* For testing and design use the bprder below */
  /* border: 1px solid var(--color4);
  border-radius: 10px; */
}

.info-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px 10px;
  width: 100%;
  /* Back color for testing */
  /* background-color: #ffffff2d; */
}

#nameTaha {
  margin-bottom: 10px;
}

#descTaha {
  margin-top: 10px;
}

.pic {
  width: 100px;
  height: 100px;
  display: block;
  /* For testing the box for the pic */
  /* background-color: #ff0000; */
}
@keyframes bounce-up {
  0%,
  100% {
    transform: translateY(0);
  }
  15%,
  55% {
    transform: translateY(-10px); /* Move up */
  }
  30%,
  70% {
    transform: translateY(0); /* Move back down */
  }
  60% {
    transform: translateY(-5px); /* Second, smaller bounce up */
  }
  85% {
    transform: translateY(0); /* Return to start position */
  }
}

@keyframes colorize-pic {
  from {
    filter: grayscale(100%) brightness(120%);
  }
  to {
    filter: none;
  }
}

#profilepic {
  filter: grayscale(100%) brightness(120%);
  width: 100%;
  height: auto;
  object-fit: cover;
  border-radius: 50%;
}
#profilepic:hover {
  animation: bounce-up 1.5s ease-in-out, colorize-pic 0.5s ease-in-out forwards;
}

a {
  color: var(--color4);
  text-decoration: none;
}

/* Extra small devices (phones, 600px and down) */
/* @media only screen and (max-width: 600px) {} */

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  .profile-box-flex {
    width: 600px;
    flex-direction: row;
    align-items: stretch;
  }
  .info-box {
    float: left;
    align-items: start;
    width: fit-content;
    /* flex-grow: 1; */
    justify-content: space-between;
    padding: 0;
    margin: 0px 0px 0px 30px;
  }
  #nameTaha {
    margin: 0px;
  }

  #descTaha {
    margin: 0px;
  }
  .pic {
    flex-shrink: 0;
  }
}
/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
}
/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
}

